# luluwaku

./: README.md  pyproject.toml
cosasa/: core.py
luluwaku/: core.py
luluwaku/actions/: attack.py  group.py  item.py  movement.py  skill.py  transaction.py
luluwaku/items/: book.py  drug.py  weapon.py
luluwaku/items/books/: cure.py  fireball.py
luluwaku/items/weapons/: normal_sword.py
luluwaku/test/: test_map.py  test_resolution.py
