[tool.poetry]
name = "luluwaku"
version = "0.1.0"
description = "A semi-auto TRPG engine."
authors = ["thautwarm <twshere@outlook.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
